// Vitest Snapshot v1

exports[`Avatar > Avatar adjustVue demo works fine 1`] = `
<t-space
  size="large"
>
  <t-avatar>
    王
  </t-avatar>
  <t-avatar>
    王亿
  </t-avatar>
  <t-avatar>
    王亿亿
  </t-avatar>
</t-space>
`;

exports[`Avatar > Avatar baseVue demo works fine 1`] = `
<t-space
  size="large"
>
  <t-avatar
    image="https://tdesign.gtimg.com/site/avatar.jpg"
  />
  <t-avatar>
    W
  </t-avatar>
  <t-avatar
    icon="() => h(__vite_ssr_import_0__.UserIcon)"
  />
  <t-avatar />
</t-space>
`;

exports[`Avatar > Avatar groupCascadingVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-space
    break-line=""
  >
    <t-avatar-group>
      <t-avatar
        image="https://tdesign.gtimg.com/site/avatar.jpg"
      />
      <t-avatar>
        W
      </t-avatar>
      <t-avatar
        icon="() => h(__vite_ssr_import_0__.UserIcon)"
      />
    </t-avatar-group>
  </t-space>
  <t-space
    break-line=""
  >
    <t-avatar-group
      cascading="left-up"
    >
      <t-avatar
        image="https://tdesign.gtimg.com/site/avatar.jpg"
      />
      <t-avatar>
        W
      </t-avatar>
      <t-avatar
        icon="() => h(__vite_ssr_import_0__.UserIcon)"
      />
    </t-avatar-group>
  </t-space>
</t-space>
`;

exports[`Avatar > Avatar groupMaxVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-space
    break-line=""
  >
    <t-avatar-group
      max="2"
      size="large"
    >
      <t-avatar
        image="https://tdesign.gtimg.com/site/avatar.jpg"
      />
      <t-avatar>
        Avatar
      </t-avatar>
      <t-avatar
        image="https://tdesign.gtimg.com/site/avatar.jpg"
      />
    </t-avatar-group>
  </t-space>
  <t-space
    break-line=""
  >
    <t-avatar-group
      collapseavatar="() => h(__vite_ssr_import_0__.EllipsisIcon)"
      max="2"
      size="large"
    >
      <t-avatar
        image="https://tdesign.gtimg.com/site/avatar.jpg"
      />
      <t-avatar>
        Avatar
      </t-avatar>
      <t-avatar
        icon="() => h(__vite_ssr_import_0__.UserIcon)"
      />
    </t-avatar-group>
  </t-space>
  <t-space
    break-line=""
  >
    <t-avatar-group
      collapseavatar="more"
      max="2"
      size="large"
    >
      <t-avatar
        image="https://tdesign.gtimg.com/site/avatar.jpg"
      />
      <t-avatar>
        Avatar
      </t-avatar>
      <t-avatar
        icon="() => h(__vite_ssr_import_0__.UserIcon)"
      />
    </t-avatar-group>
  </t-space>
</t-space>
`;

exports[`Avatar > Avatar groupVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-space
    break-line=""
  >
    <t-avatar-group>
      <t-avatar
        image="https://tdesign.gtimg.com/site/avatar.jpg"
      />
      <t-avatar>
        W
      </t-avatar>
      <t-avatar
        icon="() => h(__vite_ssr_import_0__.UserIcon)"
      />
    </t-avatar-group>
  </t-space>
  <t-space
    break-line=""
  >
    <t-avatar-group
      size="large"
    >
      <t-avatar
        image="https://tdesign.gtimg.com/site/avatar.jpg"
      />
      <t-avatar>
        W
      </t-avatar>
      <t-avatar
        icon="() => h(__vite_ssr_import_0__.UserIcon)"
      />
    </t-avatar-group>
  </t-space>
</t-space>
`;

exports[`Avatar > Avatar shapeVue demo works fine 1`] = `
<t-space
  size="large"
>
  <t-avatar>
    W
  </t-avatar>
  <t-avatar
    shape="round"
  >
    W
  </t-avatar>
</t-space>
`;

exports[`Avatar > Avatar sizeVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-space
    align="center"
    break-line=""
  >
    <t-avatar
      size="small"
    >
      W
    </t-avatar>
    <t-avatar
      size="medium"
    >
      W
    </t-avatar>
    <t-avatar
      size="large"
    >
      W
    </t-avatar>
    <t-avatar
      size="100px"
    >
      W
    </t-avatar>
  </t-space>
  <t-space
    align="center"
    break-line=""
  >
    <t-avatar
      shape="round"
      size="small"
    >
      W
    </t-avatar>
    <t-avatar
      shape="round"
      size="medium"
    >
      W
    </t-avatar>
    <t-avatar
      shape="round"
      size="large"
    >
      W
    </t-avatar>
    <t-avatar
      shape="round"
      size="100px"
    >
      W
    </t-avatar>
  </t-space>
</t-space>
`;
